projects/app1/src/app/sharedComponents/resume-document/resume-document.component.scss
.flexBoxInfo,
.flexBoxInfo--red {
  border-radius: 0.4rem;
  min-height: 10rem;
  background: white;
  padding: .5rem;
  box-shadow: 0 1px 6px 0 rgb(32 33 36 / 30%);
  border: 1px solid rgba(138, 138, 138, .3);
  margin-bottom:2rem;

  &>*:not(:last-child) {
    margin: 0 0 1.5rem;
  }

  h3 {
    font-weight: 600;
    font-size: 1.3rem;
  }

  p {
    font-weight: 500;
    font-size: 1.1rem;
  }

  hr {
    border: none;
    height: .1rem;
    background: rgba(220, 220, 220, .8);
  }
}

.flexBoxInfo--red {
    background:rgba(209, 0, 2, 1);
    color:white;
    min-height:auto;
}

.boxInfoRow {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-items: center;
}

a[download] {
  display:block;
  width: 100%;
  text-decoration: none;
}

.downloadDoc {
  cursor:pointer;
  position:relative;
}

.downloadDocument {
  svg {
    width:2rem;
    height:2rem;
  }
  path {
    fill:white;
  }
}

